--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
   <link rel="icon" href="favicon.png" type="image/x-icon">
 
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="Relax To Order Delivery Service ">
+  <meta name="keywords" content="Relax to Order, Delivery Service ,Delivery , Cuddalore, Relax To Order, RELAX TO ORDER , ரிலாக்ஸ் டு ஆர்டர் ">
+  <meta name="author" content="Relax to Order">
+  
+
   
 
   <meta name="description" content="Relax to Order - உங்கள் வீட்டிலிருந்து ஓரளவுக்கு கூட வெளியே போகாமல் பொருட்களை Order செய்யும் வசதி. Shop-க்கு போன மடையாதீங்க. Just relax and order now!">
