--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       <textarea id="note" rows="2" placeholder="உதா: நான் கேட்ட பொருள் இல்லை என்றால் Call பண்ணுங்க"></textarea>
 
       <div class="petrol-notice">
-        ⚠️ குறைந்தபட்சமாக ₹100 பெட்ரோல் கட்டணம் உள்ளது. இது Final Bill-இல் சேர்க்கப்படும்.
+        ⚠️ குறைந்தபட்சமாக Service Charge ₹100 உள்ளது. இது Final Bill-இல் சேர்க்கப்படும்.
       </div>
 
       <button type="submit" class="submit-button">🚚 Order Now - Whatsapp</button>
@@ -344,7 +344,7 @@
     <button class="close-btn" onclick="toggleSidebar()">×</button>
     <h3>📜 Terms & Conditions</h3>
     <p>
-      1. பெட்ரோல் சார்ஜ் ₹100 கட்டாயம் சேர்க்கப்படும்.<br>
+      1. Service Charge ₹100 கட்டாயம் சேர்க்கப்படும்.<br>
       2. பொருட்கள் வாடிக்கையாளரால் தேர்ந்தெடுக்கப்பட வேண்டும்.<br>
       3. Whatsapp மூலம் மட்டுமே ஆர்டர் அனுப்பப்பட வேண்டும்.<br>
       4. தொடர்பு இல்லாத மொபைல் எண்கள் நிராகரிக்கப்படும்.<br>
@@ -476,7 +476,7 @@
         itemText += `\n${i + 1}. ${item}`;
       });
 
-      const message = `🛒 புதிய ஆர்டர்:\n${itemText}\n\n👤 பெயர்: ${name}\n📱 எண்: ${phone}\n📍 மாவட்டம்: ${district}\n🏙️ வட்டம்: ${taluk}\n🏠 முகவரி:\n${address}\n\n📌 குறிப்பு:\n${note || 'எதுவும் குறிப்பிடவில்லை'}\n\n⚠️ குறைந்தபட்சமாக ₹100 பெட்ரோல் கட்டணம் உள்ளது. இது Final Bill-இல் சேர்க்கப்படும்.`;
+      const message = `🛒 புதிய ஆர்டர்:\n${itemText}\n\n👤 பெயர்: ${name}\n📱 எண்: ${phone}\n📍 மாவட்டம்: ${district}\n🏙️ வட்டம்: ${taluk}\n🏠 முகவரி:\n${address}\n\n📌 குறிப்பு:\n${note || 'எதுவும் குறிப்பிடவில்லை'}\n\n⚠️ குறைந்தபட்சமாக Service Charge ₹100 கட்டணம் உள்ளது. இது Final Bill-இல் சேர்க்கப்படும்.`;
 
       const whatsappLink = `https://wa.me/919344165879?text=${encodeURIComponent(message)}`;
       showToast();
