--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Relax to Order</title>
-
-  <link rel="icon" href="favicon.png" type="image/x-icon">
+  
+  <link rel="icon" type="image/png" href="favicon.png">
 
 
   <!-- ✅ SEO Meta Tags -->
